# CanvasLytics

./: README.md  design_graph.html  docker-compose.yml  index.html  render.yaml  style.css
CanvaLytics-React/: index.html  package.json
CanvaLytics-React/src/: App.jsx  index.css
agent/: main.py
archive/: app.py  ml_service.py  replit.md  routes.py
archive/CanvaLytics-React/: package-lock.json
archive/agent/: Dockerfile
archive/attached_assets/: Pasted-Below-is-a-handover-brief-you-can-give-a-Python-full-stack-developer-It-lists-every-feature--1751281141610_1751281141612.txt
archive/before v0.1.0.0/: data_service.py  docker-compose.yml  models.py  openai_service.py  pyproject.toml  requirements.txt
archive/before v0.1.0.0/attached_assets/: app_1751281159823.js
archive/before v0.1.0.0/backend/: main.py
archive/before v0.1.0.0/data/: titanic.csv
archive/before v0.1.0.0/instance/: askyourdata.db
archive/before v0.1.0.0/services/sklearn-lab/: main.py
archive/before v0.1.0.0/static/: app.js
archive/static/: index.html  style.css
archive/v0.1.1.0/backend/: main.py  pyproject.toml  requirements.txt
archive/v0.1.1.0/backend/agent/: main.py
archive/v0.1.1.0/backend/services/pandas-eda/: main.py
assets/: masterplan.md
backend/: requirements copy.txt  requirements.txt
backend/agent/: main.py
client/: Dockerfile  package-lock.json  package.json
design/: basic_features.md  masterplan.md
frontend/: app.js
frontend/src/: App.jsx
services/: Dockerfile  requirements.txt
services/agent/: Dockerfile
services/pandas-eda/: Dockerfile  (+1 more)
(+40 files in other folders)
