[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "flask-cors>=6.0.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
    "google-genai>=1.23.0",
]
